# fr-rus_idioms_translator

./: .env  .gitgnore  README.md  debug.html  pyproject.toml  requirements.txt
data/: expressio_backup.json  wiki_backup.json
docker/: Dockerfile for api  Dockerfile for web  app.py  docker-compose.yml  requirements.txt  web_app.py
src/EDA/: EDA.py
src/idioms_translator/: .env  collector.py  model.py  pipeline.py  translators.py  utils.py
src/parsers/: parser_expressio.py  parser_wiktionary.py
