[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fr-rus-idioms-translator"
version = "0.1.0"
description = "Переводчик идиом с французского на русский, основанный на дообученной модели mT5"
authors = [
    { name="Alyona Skrynnikova" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.55",
    "torch",
    "streamlit",
    "protobuf"
]

[tool.setuptools.packages.find]
where = ["src"]   